--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
             <h2 class="card__title">1 спринт: Я — чистый лист</h2>
             <div class="card__poster">
               <span class="card__poster-label">&lt;/HTML&gt;</span>
-              <picture class="filter__one">
+              <picture>
                 <img
-                  class="card__poster-image"
+                  class="card__poster-image filter__one"
                   src="./images/image.gif"
                   alt="Мир киберпанка. Мужчина стоит с сигаретой во рту на высоком этаже полуразрушенного здания и смотрит вдаль. Вокруг него много поломанной техники, висящие с потолка провода."
                   loading="lazy"
@@ -200,9 +200,9 @@
             <h2 class="card__title">1 спринт: А если не получится?</h2>
             <div class="card__poster">
               <span class="card__poster-label">&lt;CSS&gt;</span>
-              <picture class="filter__two">
+              <picture>
                 <img
-                  class="card__poster-image"
+                  class="card__poster-image filter__two"
                   src="./images/image.gif"
                   alt="Мир киберпанка. Мужчина стоит с сигаретой во рту на высоком этаже полуразрушенного здания и смотрит вдаль. Вокруг него много поломанной техники, висящие с потолка провода."
                   loading="lazy"
@@ -267,9 +267,9 @@
             <h2 class="card__title">2 спринт: Погоня за идеалом</h2>
             <div class="card__poster">
               <span class="card__poster-label">&lt;desigions&gt;</span>
-              <picture class="filter__three">
+              <picture>
                 <img
-                  class="card__poster-image"
+                  class="card__poster-image filter__three"
                   src="./images/image.gif"
                   alt="Мир киберпанка. Мужчина стоит с сигаретой во рту на высоком этаже полуразрушенного здания и смотрит вдаль. Вокруг него много поломанной техники, висящие с потолка провода."
                   loading="lazy"
@@ -336,9 +336,9 @@
             <h2 class="card__title">2 спринт: О тех, кто рядом</h2>
             <div class="card__poster">
               <span class="card__poster-label">care</span>
-              <picture class="filter__four">
+              <picture>
                 <img
-                  class="card__poster-image"
+                  class="card__poster-image filter__four"
                   src="./images/image.gif"
                   alt="Мир киберпанка. Мужчина стоит с сигаретой во рту на высоком этаже полуразрушенного здания и смотрит вдаль. Вокруг него много поломанной техники, висящие с потолка провода."
                   loading="lazy"
@@ -405,9 +405,9 @@
             <h2 class="card__title">3 спринт: Обходные стратегии</h2>
             <div class="card__poster">
               <span class="card__poster-label">&lt;support&gt;</span>
-              <picture class="filter__five">
+              <picture>
                 <img
-                  class="card__poster-image"
+                  class="card__poster-image filter__five"
                   src="./images/image.gif"
                   alt="Мир киберпанка. Мужчина стоит с сигаретой во рту на высоком этаже полуразрушенного здания и смотрит вдаль. Вокруг него много поломанной техники, висящие с потолка провода."
                   loading="lazy"
@@ -472,9 +472,9 @@
             <h2 class="card__title">3 спринт: Когда опускаются руки</h2>
             <div class="card__poster">
               <span class="card__poster-label">&lt;lifes-style: none;&gt;</span>
-              <picture class="filter__six">
+              <picture>
                 <img
-                  class="card__poster-image"
+                  class="card__poster-image filter__six"
                   src="./images/image.gif"
                   alt="Мир киберпанка. Мужчина стоит с сигаретой во рту на высоком этаже полуразрушенного здания и смотрит вдаль. Вокруг него много поломанной техники, висящие с потолка провода."
                   loading="lazy"
@@ -541,9 +541,9 @@
             <h2 class="card__title">«Сейчас я здесь»</h2>
             <div class="card__poster">
               <span class="card__poster-label">&lt;experience&gt;</span>
-              <picture class="filter__seven">
+              <picture>
                 <img
-                  class="card__poster-image"
+                  class="card__poster-image filter__seven"
                   src="./images/image.gif"
                   alt="Мир киберпанка. Мужчина стоит с сигаретой во рту на высоком этаже полуразрушенного здания и смотрит вдаль. Вокруг него много поломанной техники, висящие с потолка провода."
                   loading="lazy"
