исправлены ошибки от ревью

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               <span class="card__poster-label">&lt;/HTML&gt;</span>
               <picture>
                 <img
-                  class="card__poster-image filter__one"
+                  class="card__poster-image filter__brightness"
                   src="./images/image.gif"
                   alt="Мир киберпанка. Мужчина стоит с сигаретой во рту на высоком этаже полуразрушенного здания и смотрит вдаль. Вокруг него много поломанной техники, висящие с потолка провода."
                   loading="lazy"
@@ -202,7 +202,7 @@
               <span class="card__poster-label">&lt;CSS&gt;</span>
               <picture>
                 <img
-                  class="card__poster-image filter__two"
+                  class="card__poster-image filter__saturate"
                   src="./images/image.gif"
                   alt="Мир киберпанка. Мужчина стоит с сигаретой во рту на высоком этаже полуразрушенного здания и смотрит вдаль. Вокруг него много поломанной техники, висящие с потолка провода."
                   loading="lazy"
@@ -269,7 +269,7 @@
               <span class="card__poster-label">&lt;desigions&gt;</span>
               <picture>
                 <img
-                  class="card__poster-image filter__three"
+                  class="card__poster-image filter__hue-rotate"
                   src="./images/image.gif"
                   alt="Мир киберпанка. Мужчина стоит с сигаретой во рту на высоком этаже полуразрушенного здания и смотрит вдаль. Вокруг него много поломанной техники, висящие с потолка провода."
                   loading="lazy"
@@ -338,7 +338,7 @@
               <span class="card__poster-label">care</span>
               <picture>
                 <img
-                  class="card__poster-image filter__four"
+                  class="card__poster-image filter__invert"
                   src="./images/image.gif"
                   alt="Мир киберпанка. Мужчина стоит с сигаретой во рту на высоком этаже полуразрушенного здания и смотрит вдаль. Вокруг него много поломанной техники, висящие с потолка провода."
                   loading="lazy"
@@ -407,7 +407,7 @@
               <span class="card__poster-label">&lt;support&gt;</span>
               <picture>
                 <img
-                  class="card__poster-image filter__five"
+                  class="card__poster-image filter__sepia"
                   src="./images/image.gif"
                   alt="Мир киберпанка. Мужчина стоит с сигаретой во рту на высоком этаже полуразрушенного здания и смотрит вдаль. Вокруг него много поломанной техники, висящие с потолка провода."
                   loading="lazy"
@@ -474,7 +474,7 @@
               <span class="card__poster-label">&lt;lifes-style: none;&gt;</span>
               <picture>
                 <img
-                  class="card__poster-image filter__six"
+                  class="card__poster-image filter__blur"
                   src="./images/image.gif"
                   alt="Мир киберпанка. Мужчина стоит с сигаретой во рту на высоком этаже полуразрушенного здания и смотрит вдаль. Вокруг него много поломанной техники, висящие с потолка провода."
                   loading="lazy"
@@ -543,7 +543,7 @@
               <span class="card__poster-label">&lt;experience&gt;</span>
               <picture>
                 <img
-                  class="card__poster-image filter__seven"
+                  class="card__poster-image multi__filter"
                   src="./images/image.gif"
                   alt="Мир киберпанка. Мужчина стоит с сигаретой во рту на высоком этаже полуразрушенного здания и смотрит вдаль. Вокруг него много поломанной техники, висящие с потолка провода."
                   loading="lazy"
@@ -645,6 +645,8 @@
           <span class="button__text">ok</span>
         </button>
       </form>
+      <script src="./scripts/set-theme.js"></script>
+      <script src="./scripts/like.js"></script>
     </dialog>
   </body>
 </html>
